newsletter RTL mobile alignment (bug 1161523)

--- a/src/media/css/newsletter.styl
+++ b/src/media/css/newsletter.styl
@@ -160,6 +160,11 @@ $arrow-size = 10px;
     button {
         margin: 0 20px 20px 0;
     }
+    select {
+        +rtl() {
+            margin-right: 0;
+        }
+    }
 }
 
 @media $base-desktop {
